@@ -1,0 +1,2 @@
+class Toolbox2Exception(Exception):
+    pass
